Completed Ui for StorageReceipt TODO: Save receipt

--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -750,6 +750,11 @@
 	<system:String x:Key="Edit.Receipt.DataGrid.Header.Ordered">Besteld</system:String>
 	<system:String x:Key="Edit.Receipt.DataGrid.Header.Received">Eerder ontvangen</system:String>
 	<system:String x:Key="Edit.Receipt.DataGrid.Header.ToReceive">Ontvangen</system:String>
+
+	<system:String x:Key="Edit.Receipt.Switch.Complete.Tooltip">De gehele bestelling is compleet geleverd</system:String>
+	<system:String x:Key="Edit.Receipt.Switch.Complete.Tag">Compleet</system:String>
+	<system:String x:Key="Edit.Receipt.Switch.Incomplete.Tooltip">De bestelling is nog niet compleet geleverd</system:String>
+	<system:String x:Key="Edit.Receipt.Switch.Incomplete.Tag">Incompleet</system:String>
 	<!--#endregion-->
 	<!--#endregion-->
 
