--- a/Modelbouwer/View/StorageReportReceipt.xaml
+++ b/Modelbouwer/View/StorageReportReceipt.xaml
@@ -8,7 +8,8 @@
 	Title="StorageReportReceipt"
 	d:DesignHeight="600"
 	d:DesignWidth="1000"
-	mc:Ignorable="d">
+	mc:Ignorable="d"
+	>
 
 	<Grid>
 		<TextBlock Text="StorageReportReceipt" />
