--- a/Modelbouwer/View/StorageReportOrder.xaml
+++ b/Modelbouwer/View/StorageReportOrder.xaml
@@ -2,15 +2,374 @@
 	x:Class="Modelbouwer.View.StorageReportOrder"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:converter="clr-namespace:Modelbouwer.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:helper="clr-namespace:Modelbouwer.Helper"
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Title="StorageReportOrder"
-	d:DesignHeight="600"
-	d:DesignWidth="1000"
-	mc:Ignorable="d">
+	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
+	Title="OrderReport"
+	>
 
-	<Grid>
-		<TextBlock Text="StorageReportOrder" />
-	</Grid>
+	<Page.DataContext>
+		<viewmodels:OrderlineReportViewModel />
+	</Page.DataContext>
+
+	<Page.Resources>
+		<converter:IntToBoolConverter x:Key="IntToBoolConverter" />
+	</Page.Resources>
+
+	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
+		<Grid Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="60" />
+				<RowDefinition Height="50" />
+				<RowDefinition Height="*" />
+				<RowDefinition Height="0" />
+			</Grid.RowDefinitions>
+
+			<!--#region Page title-->
+			<StackPanel
+				Grid.Row="0"
+				Margin="0,0,0,0"
+				Orientation="Vertical"
+				>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="2*" />
+					</Grid.ColumnDefinitions>
+
+					<TextBlock
+						Grid.Column="0"
+						Style="{DynamicResource Title}"
+						Text="{StaticResource Edit.OrderReport.Title}"
+						/>
+				</Grid>
+				<Path Style="{DynamicResource TitleLine}" />
+				<TextBlock
+					Grid.Column="0"
+					Style="{DynamicResource SubTitle}"
+					Text="{StaticResource Edit.OrderReport.Subtitle}"
+					/>
+				<CheckBox
+					x:Name="valueShow"
+					IsChecked="True"
+					Style="{DynamicResource HiddenCheckBox}"
+					/>
+			</StackPanel>
+			<!--#endregion-->
+
+			<!--#region Search block-->
+			<StackPanel Grid.Row="1" Orientation="Horizontal">
+				<Border
+					Width="365"
+					Height="35"
+					Margin="5"
+					Background="White"
+					BorderBrush="#cccccc"
+					BorderThickness="1"
+					CornerRadius="5"
+					>
+
+					<Grid VerticalAlignment="Center">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="15" />
+							<ColumnDefinition Width="35" />
+						</Grid.ColumnDefinitions>
+
+						<TextBox
+							x:Name="FilterSearchText"
+							Grid.Column="0"
+							Width="306"
+							Height="27"
+							MinWidth="220"
+							Margin="3"
+							Padding="3,0"
+							HorizontalAlignment="Left"
+							VerticalAlignment="Center"
+							Background="White"
+							Tag="{StaticResource Edit.OrderReport.DataGrid.FilterSearch.Search.Tag}"
+							TextChanged="FilterSearch"
+							ToolTip="{StaticResource Edit.OrderReport.DataGrid.FilterSearch.Search.Tooltip}"
+							UseLayoutRounding="True"
+							/>
+
+						<Button
+							x:Name="ClearFilterSearch"
+							Grid.Column="1"
+							Margin="0,0,0,4"
+							HorizontalAlignment="Center"
+							VerticalAlignment="Bottom"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ClearText"
+							ToolTip="{StaticResource Edit.OrderReport.DataGrid.FilterSearch.Search.Clear.Tooltip}"
+							Visibility="Collapsed"
+							>
+							<Image Source="{StaticResource clear}" />
+						</Button>
+
+						<GridSplitter
+							Grid.Column="1"
+							Width="1"
+							VerticalAlignment="Stretch"
+							Background="LightGray"
+							/>
+
+						<Button
+							x:Name="FilterButton"
+							Grid.Column="2"
+							Width="20"
+							Height="20"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ToggleButton"
+							ToolTip="{StaticResource Edit.OrderReport.DataGrid.Filter.Tooltip}"
+							Visibility="Collapsed"
+							>
+							<Image
+								Width="20"
+								Height="20"
+								Source="{StaticResource filter}"
+								/>
+						</Button>
+						<Button
+							x:Name="SearchButton"
+							Grid.Column="2"
+							Width="20"
+							Height="20"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ToggleButton"
+							ToolTip="{StaticResource Edit.OrderReport.DataGrid.Search.Tooltip}"
+							Visibility="Visible"
+							>
+							<Image
+								Width="18"
+								Height="18"
+								Source="{StaticResource search}"
+								/>
+						</Button>
+
+
+					</Grid>
+				</Border>
+			</StackPanel>
+			<!--#endregion-->
+
+			<!--#region Datagrid-->
+			<syncfusion:SfDataGrid
+				x:Name="dataGrid"
+				Grid.Row="2"
+				Margin="10,5"
+				AllowDeleting="False"
+				AllowEditing="False"
+				AllowFiltering="False"
+				AllowGrouping="True"
+				AllowResizingColumns="True"
+				AllowTriStateSorting="True"
+				AutoGenerateColumns="False"
+				ColumnSizer="Star"
+				GroupDropAreaStyle="{DynamicResource SfDataGridGroupDropAreaStyle1}"
+				IsGroupDropAreaExpanded="True"
+				ItemsSource="{Binding OrderlineReport, Mode=TwoWay}"
+				SelectedIndex="0"
+				ShowColumnWhenGrouped="True"
+				ShowGroupDropArea="True"
+				SortClickAction="SingleClick"
+				>
+				<syncfusion:SfDataGrid.Resources>
+					<Style TargetType="syncfusion:GridTableSummaryCell">
+						<Setter Property="FontSize" Value="13" />
+						<Setter Property="FontStyle" Value="Italic" />
+						<Setter Property="FontWeight" Value="Bold" />
+						<Setter Property="Foreground" Value="DarkBlue" />
+						<Setter Property="HorizontalContentAlignment" Value="Right" />
+					</Style>
+
+					<Style TargetType="syncfusion:GridGroupSummaryCell">
+						<Setter Property="FontSize" Value="12" />
+						<Setter Property="FontStyle" Value="Italic" />
+						<Setter Property="FontWeight" Value="Bold" />
+						<Setter Property="Foreground" Value="Blue" />
+						<Setter Property="HorizontalContentAlignment" Value="Right" />
+					</Style>
+
+
+				</syncfusion:SfDataGrid.Resources>
+
+				<syncfusion:SfDataGrid.TableSummaryRows>
+					<syncfusion:GridTableSummaryRow Position="Top" ShowSummaryInRow="False">
+						<syncfusion:GridSummaryRow.SummaryColumns>
+							<syncfusion:GridSummaryColumn
+								Name="Value"
+								Format="'{Sum:c}'"
+								MappingName="ProductOrderReportValue"
+								SummaryType="DoubleAggregate"
+								/>
+							<syncfusion:GridSummaryColumn
+								Name="VirtualValue"
+								Format="'{Sum:c}'"
+								MappingName="ProductVirtualOrderReportValue"
+								SummaryType="DoubleAggregate"
+								/>
+						</syncfusion:GridSummaryRow.SummaryColumns>
+					</syncfusion:GridTableSummaryRow>
+				</syncfusion:SfDataGrid.TableSummaryRows>
+
+				<syncfusion:SfDataGrid.GroupSummaryRows>
+					<syncfusion:GridSummaryRow ShowSummaryInRow="False">
+						<syncfusion:GridSummaryRow.SummaryColumns>
+							<syncfusion:GridSummaryColumn
+								Name="RowValue"
+								Format="'{Sum:c}'"
+								MappingName="ProductOrderReportValue"
+								SummaryType="DoubleAggregate"
+								/>
+
+							<syncfusion:GridSummaryColumn
+								Name="RowVirtualValue"
+								Format="'{Sum:c}'"
+								MappingName="ProductVirtualOrderReportValue"
+								SummaryType="DoubleAggregate"
+								/>
+						</syncfusion:GridSummaryRow.SummaryColumns>
+					</syncfusion:GridSummaryRow>
+				</syncfusion:SfDataGrid.GroupSummaryRows>
+
+				<syncfusion:SfDataGrid.Columns>
+					<syncfusion:GridTextColumn
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.OrderId}"
+						IsHidden="True"
+						MappingName="OrderId"
+						/>
+
+					<syncfusion:GridTextColumn
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.SupplierId}"
+						IsHidden="True"
+						MappingName="SupplierId"
+						/>
+
+					<syncfusion:GridTextColumn
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.ProductId}"
+						IsHidden="True"
+						MappingName="ProductId"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="True" Width="160"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.OrderNumber}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="OrderNumber"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="True" Width="100"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.OrderDate}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="OrderDate"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="True" Width="240"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Supplier}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="SupplierName"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="True" Width="150"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.ProductCode}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductCode"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.ProductName}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductName"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False" Width="90"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.UnitPrice}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="UnitPrice"
+						MinValue="0.00"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False" Width="90"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Ordered}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="Ordered"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False" Width="90"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Received}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="Received"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False" Width="90"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Expected}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="Expected"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						IsHidden="True"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Closed}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="Closed"
+						/>
+					
+					<syncfusion:GridCheckBoxColumn
+						AllowFiltering="False" Width="80"
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Closed}"
+						HorizontalHeaderContentAlignment="Center"
+						MappingName="Closed, converter:IntToBoolConverter"
+						/>
+
+					<syncfusion:GridTextColumn
+						IsHidden="True"
+						AllowGrouping="True" Width="120"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.ClosedDate}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ClosedDate"
+						/>
+
+				</syncfusion:SfDataGrid.Columns>
+			</syncfusion:SfDataGrid>
+			<!--#endregion-->
+		</Grid>
+	</Border>
 </Page>
