--- a/Modelbouwer/View/StorageReportOrder.xaml
+++ b/Modelbouwer/View/StorageReportOrder.xaml
@@ -260,7 +260,8 @@
 						/>
 
 					<syncfusion:GridTextColumn
-						AllowGrouping="True" Width="160"
+						Width="160"
+						AllowGrouping="True"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.OrderNumber}"
 						HorizontalHeaderContentAlignment="Left"
@@ -268,7 +269,8 @@
 						/>
 
 					<syncfusion:GridTextColumn
-						AllowGrouping="True" Width="100"
+						Width="100"
+						AllowGrouping="True"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.OrderDate}"
 						HorizontalHeaderContentAlignment="Left"
@@ -276,7 +278,8 @@
 						/>
 
 					<syncfusion:GridTextColumn
-						AllowGrouping="True" Width="240"
+						Width="240"
+						AllowGrouping="True"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Supplier}"
 						HorizontalHeaderContentAlignment="Left"
@@ -284,7 +287,8 @@
 						/>
 
 					<syncfusion:GridTextColumn
-						AllowGrouping="True" Width="150"
+						Width="150"
+						AllowGrouping="True"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.ProductCode}"
 						HorizontalHeaderContentAlignment="Left"
@@ -300,7 +304,8 @@
 						/>
 
 					<syncfusion:GridNumericColumn
-						AllowFiltering="False" Width="90"
+						Width="90"
+						AllowFiltering="False"
 						AllowGrouping="False"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.UnitPrice}"
@@ -310,7 +315,8 @@
 						/>
 
 					<syncfusion:GridNumericColumn
-						AllowFiltering="False" Width="90"
+						Width="90"
+						AllowFiltering="False"
 						AllowGrouping="False"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Ordered}"
@@ -320,7 +326,8 @@
 						/>
 
 					<syncfusion:GridNumericColumn
-						AllowFiltering="False" Width="90"
+						Width="90"
+						AllowFiltering="False"
 						AllowGrouping="False"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Received}"
@@ -330,7 +337,8 @@
 						/>
 
 					<syncfusion:GridNumericColumn
-						AllowFiltering="False" Width="90"
+						Width="90"
+						AllowFiltering="False"
 						AllowGrouping="False"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Expected}"
@@ -340,17 +348,18 @@
 						/>
 
 					<syncfusion:GridNumericColumn
-						IsHidden="True"
 						AllowFiltering="False"
 						AllowGrouping="False"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Closed}"
 						HorizontalHeaderContentAlignment="Right"
+						IsHidden="True"
 						MappingName="Closed"
 						/>
-					
+
 					<syncfusion:GridCheckBoxColumn
-						AllowFiltering="False" Width="80"
+						Width="80"
+						AllowFiltering="False"
 						AllowGrouping="True"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.Closed}"
@@ -359,11 +368,12 @@
 						/>
 
 					<syncfusion:GridTextColumn
-						IsHidden="True"
-						AllowGrouping="True" Width="120"
+						Width="120"
+						AllowGrouping="True"
 						AllowSorting="True"
 						HeaderText="{StaticResource Edit.OrderReport.DataGrid.Header.ClosedDate}"
 						HorizontalHeaderContentAlignment="Left"
+						IsHidden="True"
 						MappingName="ClosedDate"
 						/>
 
