--- a/Modelbouwer/View/StorageReportReceipt.xaml
+++ b/Modelbouwer/View/StorageReportReceipt.xaml
@@ -2,16 +2,330 @@
 	x:Class="Modelbouwer.View.StorageReportReceipt"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:converter="clr-namespace:Modelbouwer.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:helper="clr-namespace:Modelbouwer.Helper"
+	xmlns:interface="clr-namespace:Modelbouwer.Interfaces"
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
 	Title="StorageReportReceipt"
-	d:DesignHeight="600"
-	d:DesignWidth="1000"
-	mc:Ignorable="d"
 	>
 
-	<Grid>
-		<TextBlock Text="StorageReportReceipt" />
-	</Grid>
+	<Page.DataContext>
+		<viewmodels:ReceiptsReportViewModel />
+	</Page.DataContext>
+
+	<Page.Resources>
+		<converter:IntToBoolConverter x:Key="IntToBoolConverter" />
+		<converter:EmptyCellConverter x:Key="EmptyCellConverter" />
+	</Page.Resources>
+
+	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
+		<Grid Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="60" />
+				<RowDefinition Height="50" />
+				<RowDefinition Height="*" />
+				<RowDefinition Height="0" />
+			</Grid.RowDefinitions>
+
+			<!--#region Page title-->
+			<StackPanel
+				Grid.Row="0"
+				Margin="0,0,0,0"
+				Orientation="Vertical"
+				>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="2*" />
+					</Grid.ColumnDefinitions>
+
+					<TextBlock
+						Grid.Column="0"
+						Style="{DynamicResource Title}"
+						Text="{StaticResource Edit.ReceiptReport.Title}"
+						/>
+				</Grid>
+				<Path Style="{DynamicResource TitleLine}" />
+				<TextBlock
+					Grid.Column="0"
+					Style="{DynamicResource SubTitle}"
+					Text="{StaticResource Edit.ReceiptReport.Subtitle}"
+					/>
+				<CheckBox
+					x:Name="valueShow"
+					IsChecked="True"
+					Style="{DynamicResource HiddenCheckBox}"
+					/>
+			</StackPanel>
+			<!--#endregion-->
+
+			<!--#region Search block-->
+			<StackPanel Grid.Row="1" Orientation="Horizontal">
+				<Border
+					Width="365"
+					Height="35"
+					Margin="5"
+					Background="White"
+					BorderBrush="#cccccc"
+					BorderThickness="1"
+					CornerRadius="5"
+					>
+
+					<Grid VerticalAlignment="Center">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="15" />
+							<ColumnDefinition Width="35" />
+						</Grid.ColumnDefinitions>
+
+						<TextBox
+							x:Name="FilterSearchText"
+							Grid.Column="0"
+							Width="306"
+							Height="27"
+							MinWidth="220"
+							Margin="3"
+							Padding="3,0"
+							HorizontalAlignment="Left"
+							VerticalAlignment="Center"
+							Background="White"
+							Tag="{StaticResource Edit.ReceiptReport.DataGrid.FilterSearch.Search.Tag}"
+							TextChanged="FilterSearch"
+							ToolTip="{StaticResource Edit.ReceiptReport.DataGrid.FilterSearch.Search.Tooltip}"
+							UseLayoutRounding="True"
+							/>
+
+						<Button
+							x:Name="ClearFilterSearch"
+							Grid.Column="1"
+							Margin="0,0,0,4"
+							HorizontalAlignment="Center"
+							VerticalAlignment="Bottom"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ClearText"
+							ToolTip="{StaticResource Edit.ReceiptReport.DataGrid.FilterSearch.Search.Clear.Tooltip}"
+							Visibility="Collapsed"
+							>
+							<Image Source="{StaticResource clear}" />
+						</Button>
+
+						<GridSplitter
+							Grid.Column="1"
+							Width="1"
+							VerticalAlignment="Stretch"
+							Background="LightGray"
+							/>
+
+						<Button
+							x:Name="FilterButton"
+							Grid.Column="2"
+							Width="20"
+							Height="20"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ToggleButton"
+							ToolTip="{StaticResource Edit.ReceiptReport.DataGrid.Filter.Tooltip}"
+							Visibility="Collapsed"
+							>
+							<Image
+								Width="20"
+								Height="20"
+								Source="{StaticResource filter}"
+								/>
+						</Button>
+						<Button
+							x:Name="SearchButton"
+							Grid.Column="2"
+							Width="20"
+							Height="20"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ToggleButton"
+							ToolTip="{StaticResource Edit.ReceiptReport.DataGrid.Search.Tooltip}"
+							Visibility="Visible"
+							>
+							<Image
+								Width="18"
+								Height="18"
+								Source="{StaticResource search}"
+								/>
+						</Button>
+
+
+					</Grid>
+				</Border>
+			</StackPanel>
+			<!--#endregion-->
+
+			<!--#region Datagrid-->
+			<syncfusion:SfDataGrid
+				x:Name="dataGrid"
+				Grid.Row="2"
+				Margin="10,5"
+				AllowDeleting="False"
+				AllowEditing="False"
+				AllowFiltering="False"
+				AllowGrouping="True"
+				AllowResizingColumns="True"
+				AllowTriStateSorting="True"
+				AutoGenerateColumns="False"
+				ColumnSizer="Star"
+				GroupDropAreaStyle="{DynamicResource SfDataGridGroupDropAreaStyle1}"
+				IsGroupDropAreaExpanded="True"
+				ItemsSource="{Binding ReceiptsReport, Mode=TwoWay}"
+				SelectedIndex="0"
+				ShowColumnWhenGrouped="True"
+				ShowGroupDropArea="True"
+				SortClickAction="SingleClick"
+				>
+				<syncfusion:SfDataGrid.Resources>
+					<Style TargetType="syncfusion:GridTableSummaryCell">
+						<Setter Property="FontSize" Value="13" />
+						<Setter Property="FontStyle" Value="Italic" />
+						<Setter Property="FontWeight" Value="Bold" />
+						<Setter Property="Foreground" Value="DarkBlue" />
+						<Setter Property="HorizontalContentAlignment" Value="Right" />
+					</Style>
+
+					<Style TargetType="syncfusion:GridGroupSummaryCell">
+						<Setter Property="FontSize" Value="12" />
+						<Setter Property="FontStyle" Value="Italic" />
+						<Setter Property="FontWeight" Value="Bold" />
+						<Setter Property="Foreground" Value="Blue" />
+						<Setter Property="HorizontalContentAlignment" Value="Right" />
+					</Style>
+
+
+				</syncfusion:SfDataGrid.Resources>
+
+				<syncfusion:SfDataGrid.Columns>
+					<syncfusion:GridCheckBoxSelectorColumn Width="70" HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.RowClosed}" MappingName="RowClosedCheck" AllowCheckBoxOnHeader="False" AllowBlankFilters="True" AllowFocus="False" AllowSorting="False"/>
+					<syncfusion:GridTextColumn
+						Width="90"
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.OrderDate}"
+						HorizontalHeaderContentAlignment="Left"
+						TextAlignment="Center"
+						MappingName="OrderDateString"
+						>
+						<syncfusion:GridTextColumn.DisplayBinding>
+							<MultiBinding Converter="{StaticResource EmptyCellConverter}">
+								<Binding Path="OrderDateString" />
+								<Binding Path="IsOrderLine" />
+							</MultiBinding>
+						</syncfusion:GridTextColumn.DisplayBinding>
+					</syncfusion:GridTextColumn>
+
+					<syncfusion:GridTextColumn
+						Width="160"
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.OrderNumber}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="OrderNumber"
+						>
+						<syncfusion:GridTextColumn.DisplayBinding>
+							<MultiBinding Converter="{StaticResource EmptyCellConverter}">
+								<Binding Path="OrderNumber" />
+								<Binding Path="IsOrderLine" />
+							</MultiBinding>
+						</syncfusion:GridTextColumn.DisplayBinding>
+					</syncfusion:GridTextColumn>
+
+					<syncfusion:GridTextColumn
+						Width="240"
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.Supplier}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="Supplier"
+						>
+						<syncfusion:GridTextColumn.DisplayBinding>
+							<MultiBinding Converter="{StaticResource EmptyCellConverter}">
+								<Binding Path="Supplier" />
+								<Binding Path="IsOrderLine" />
+							</MultiBinding>
+						</syncfusion:GridTextColumn.DisplayBinding>
+					</syncfusion:GridTextColumn>
+
+					<syncfusion:GridTextColumn
+						Width="150"
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.ProductCode}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="Shortname"
+						>
+						<syncfusion:GridTextColumn.DisplayBinding>
+							<MultiBinding Converter="{StaticResource EmptyCellConverter}">
+								<Binding Path="Shortname" />
+								<Binding Path="IsOrderLine" />
+							</MultiBinding>
+						</syncfusion:GridTextColumn.DisplayBinding>
+					</syncfusion:GridTextColumn>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.ProductName}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="Description"
+						>
+						<syncfusion:GridTextColumn.DisplayBinding>
+							<MultiBinding Converter="{StaticResource EmptyCellConverter}">
+								<Binding Path="Description" />
+								<Binding Path="IsOrderLine" />
+							</MultiBinding>
+						</syncfusion:GridTextColumn.DisplayBinding>
+					</syncfusion:GridTextColumn>
+
+					<syncfusion:GridNumericColumn
+						Width="70"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.Ordered}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="Ordered"
+						MinValue="0"
+						>
+						<syncfusion:GridNumericColumn.DisplayBinding>
+							<MultiBinding Converter="{StaticResource EmptyCellConverter}">
+								<Binding Path="Ordered" StringFormat="{}{0}" />
+								<Binding Path="IsOrderLine" />
+							</MultiBinding>
+						</syncfusion:GridNumericColumn.DisplayBinding>
+					</syncfusion:GridNumericColumn>
+					<syncfusion:GridTextColumn
+						Width="90"
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.ReceivedDate}"
+						HorizontalHeaderContentAlignment="Center" TextAlignment="Center"
+						MappingName="ReceivedDateString"
+						/>
+
+
+					<syncfusion:GridNumericColumn
+						Width="90"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.ReceiptReport.DataGrid.Header.Received}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="Received"
+						MinValue="0"
+						/>
+				</syncfusion:SfDataGrid.Columns>
+			</syncfusion:SfDataGrid>
+			<!--#endregion-->
+
+		</Grid>
+	</Border>
 </Page>
